Update register user api
